<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Power Nap</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_item_report">Comment | Report a Bug</string>
    <string name="menu_item_website">Visit Developer\'s Website</string>
    <string name="menu_item_rate">Rate this App</string>
    
    <string name="x_axis_textview_sep">X-Axis</string>
    <string name="y_axis_textview_sep">Y-Axis</string>
    <string name="z_axis_textview_sep">Z-Axis</string>
    
    <string name="countdown">0:00</string>
    <string name="must_wake_up">Must Wake Up By: 18:00</string>
    <string name="start_button">Start</string>
    <string name="set_alarm_button">Alarm Set for 20 minutes.</string>
    <string name="start">Start</string>
    <string name="dismiss_button_text">Dismiss</string>
    <string name="calibrate_instructions">
        Place the phone flat next to where you will be sleeping and press start.\n\n
        Calibration will determine your phone\'s position and properly
        adjust how the app measures your inactivity. It\'ll only take 3 seconds.\n\n
        (This app works best if you put it right next to your pillow. If you would like
        to recalibrate after this, hold the \"Calibrated\" button.)
    </string>
   
    <color name="light_blue">#33B5E5</color>
    <color name="dark_blue">#0099CC</color>
    
    <string name="accelerometer_title">Accelerometer</string>
    <string name="time_must_wake_by">Must wake before this time:</string>
    
    <string name="pref_colors_summary">Change App Colors</string>
    <string name="pref_color_frequency">App Colors</string>
    <string name="pref_func_setting">Functionality</string>
    <string name="pref_appearance">Personalize</string>
    <string name="prefKeyResetQuests">Reset</string>
    <string name="pref_time_message">Your desired alarm length:</string>
    <string name="pref_time_dialog_title">Alarm Length</string>
    <string name="pref_time_summary">Change the Alarm Length</string>
    <string name="pref_about">About</string>
    <string name="about_text">PowerNap was built by UC Berkeley undergraduates Brian Su, Can Koc, Cem Koc, Vineet, Alan,
         and Raymond at HackTech 2014. It is currently being maintained by Brian Su.\n\n
         Visit me @ http://www.brianysu.com</string>
    <string name="about_title">About</string>

</resources>
