<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/x_axis_textview_sep"
        style="?android:listSeparatorTextViewStyle" />
    
   	<TextView
        android:id="@+id/x_axis_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center" />
    
   	<TextView
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/y_axis_textview_sep"
   	    style="?android:listSeparatorTextViewStyle" />
   	
   	<TextView
        android:id="@+id/y_axis_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center" />

   	<TextView
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="@string/z_axis_textview_sep"
   	    style="?android:listSeparatorTextViewStyle" />

   	<TextView
        android:id="@+id/z_axis_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center" />
   	
</LinearLayout>
